# nathaniel-cpp

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
content/: Makefile.am
src/: Makefile  Makefile.am  Makefile.in  Nathaniel.cc  ResourceManager.cc  ResourceManager.h  VR.c  button.cc  main.cc  nathaniel  nathaniel.cc
src/.deps/: VR.Po  main.Po  nathaniel.Po
src/game/: GameCharacter.cc  GameCharacter.h  README
src/input/: Button.cc  Button.h  button.h
