dist_pkgdata_DATA = test.bmp

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(pkgdatadir)/fonts
	$(INSTALL_DATA) $(srcdir)/fonts/lazy.ttf $(DESTDIR)$(pkgdatadir)/fonts/
	$(MKDIR_P) $(DESTDIR)$(pkgdatadir)/spritesheets
	$(INSTALL_DATA) $(srcdir)/spritesheets/nathanielspritesheet.png $(DESTDIR)$(pkgdatadir)/spritesheets/
	$(INSTALL_DATA) $(srcdir)/spritesheets/buttonspritesheet.png $(DESTDIR)$(pkgdatadir)/spritesheets/
